package api;

syntax = "proto3";

// media definitions
import "v1.media.proto";

message Convert {
  // when this job was created
  required string createdAt = 1;

  // media is the media we need to convert
  required Media media = 2;
}