package api;

syntax = "proto3";

import "v1.telemetry.proto";

// v1.media represents v1 of the media card
message Media {
  // id of this media
  required string id = 1;
  // name of the media
  required string name = 2;

  // CreatorType is where this media came from (where it was requested)
  enum CreatorType {
    TRELLO = 0;
    TWILIO = 1;
    DISCORD = 2;
  }
  required CreatorType creator = 3;
  // ID that correlates to creator, if needed
  optional string creatorId = 4;
  
  // type of the media
  enum MediaType {
    MOVIE = 0;
    TV = 1;
    MUSIC = 2;
  }
  required MediaType type = 5;

  // SourceType is where this media came from
  enum SourceType {
    HTTP = 0;
    TORRENT = 1;
    FILE = 2;
  }
  required SourceType source = 6;
  required string sourceURI = 7;

  // MetadataType is the metadata provider used for deduplication and
  // identification
  enum MetadataType {
    MAL = 0;
    IMDB = 1;
  }
  required MetadataType metadata = 8;
  // metadataId is the id used to tie this to a metadata provider
  required string metadataId = 9;

  // Status is the status of the media in the pipeline
  required TelemetryStatusEntry status = 10;
}